//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.intel.analytics.zoo.grpc.generated.azinference";
option java_outer_classname = "AZInferenceProto";
option objc_class_prefix = "RTG";

package azinference;
import "google/protobuf/empty.proto";

// Interface exported by the server.
service AZInference {
    rpc doPredict(Content) returns (Prediction) {}
}

message Content {
    string encodedStr = 1;
}

message Prediction {
    string predictStr = 1;
}
